err/phosphoprotools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/phosphoprotools'...
Listing './lib/python3.5/site-packages/phosphoprotools/data'...
Compiling './lib/python3.5/site-packages/phosphoprotools/data/refdbprocessing.py'...
***   File "./lib/python3.5/site-packages/phosphoprotools/data/refdbprocessing.py", line 61
    print 'Saved %s pickle to %s' % (fname, pickle_fname)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/phosphoprotools/piscoreanalysis.py'...
***   File "./lib/python3.5/site-packages/phosphoprotools/piscoreanalysis.py", line 157
    print 'Performing t-tests...'
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/phosphoprotools/pubfetch.py'...
***   File "./lib/python3.5/site-packages/phosphoprotools/pubfetch.py", line 42
    print 'Building list of search strings for %d unique genes...' % len(unique_genes)
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/phosphoprotools/siteannotation.py'...
***   File "./lib/python3.5/site-packages/phosphoprotools/siteannotation.py", line 28
    print 'Extraacted compressed file to %s. Original .gz file %s can now be deleted.' % (out_filepath, gz_in_filepath)
                                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/phosphoprotools/synonymsfetch.py'...
***   File "./lib/python3.5/site-packages/phosphoprotools/synonymsfetch.py", line 50
    print 'Attempting to load saved synonyms file...'
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/phosphoprotools-0.19.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tqdm'...
Listing './lib/python3.5/site-packages/tqdm-4.19.5.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
